various fixes to msg conversion, inviting + more
* (un)escape html tags etc
* add MTX_LISTEN_PORT, set default port to 1999
* update readme with usage
* auto-accept all invites for now, since the invite_state stuff seems
  unreliable D:
* send join+names after all state events instead of in canonical alias
  msg, so no names in state are missed.
* add NOTICE support
* add .editorconfig for 4 column tabs on github web ui
* other minor stuff i can't remember

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 * handle message splitting
+* call /logout on disconnect
 * away-notify CAP for presence updates
 * room lookup for /list
 	* /publicRooms endpoint
@@ -22,3 +23,5 @@
 * daemon()
 * pagination
 * rate limiting
+* olm stuff?
+* set display name based on nick / real name?
