Set login device_id/name, minor improvements
* free irc_ variables on client exit
* add a delay after a failed sync

--- a/TODO.txt
+++ b/TODO.txt
@@ -25,3 +25,4 @@
 * rate limiting
 * olm stuff?
 * set display name based on nick / real name?
+* split messages into multiple when matrix contains \n
